--- a/astrogrid/portalB/src/docs/notes/INSTALL.txt
+++ b/astrogrid/portalB/src/docs/notes/INSTALL.txt
@@ -1,6 +1,7 @@
 
-The binary dist contains two zip files, libraries.zip and explorer.zip.
-The libraries.zip file contains the portal.jar, plus all of the jars from Axis 1.0 as well.
+The binary dist contains two zip files, libraries.zip and
+explorer.zip. The libraries.zip file contains the portal.jar,
+plus all of the jars from Axis 1.0 as well.
 These all need to go in cocoon/WEB-INF/lib.
 
 The explorer.zip contains the xsp page(s) and xsl transforms.
@@ -17,80 +18,86 @@ When everything is unpacked, you should have the following :
 
 From libraries.zip :
 
-cocoon/
-cocoon/WEB-INF
-cocoon/WEB-INF/lib
-cocoon/WEB-INF/lib/portal.jar
-cocoon/WEB-INF/lib/axis.jar
-cocoon/WEB-INF/lib/....
+	cocoon/
+	cocoon/WEB-INF
+	cocoon/WEB-INF/lib
+	cocoon/WEB-INF/lib/portal.jar
+	cocoon/WEB-INF/lib/axis.jar
+	cocoon/WEB-INF/lib/....
 
 From explorer.zip :
 
-cocoon/
-cocoon/astrogrid
-cocoon/astrogrid/sitemap.xmap
+	cocoon/
+	cocoon/astrogrid
+	cocoon/astrogrid/sitemap.xmap
 
-cocoon/astrogrid/common
-cocoon/astrogrid/common/xsl
-cocoon/astrogrid/common/xsl/template.xsl
-cocoon/astrogrid/common/xsl/astrogrid.xsl
-cocoon/astrogrid/common/xsl/xml-html.xsl
+	cocoon/astrogrid/common
+	cocoon/astrogrid/common/xsl
+	cocoon/astrogrid/common/xsl/template.xsl
+	cocoon/astrogrid/common/xsl/astrogrid.xsl
+	cocoon/astrogrid/common/xsl/xml-html.xsl
 
-cocoon/astrogrid/explorer
-cocoon/astrogrid/explorer/xsp
-cocoon/astrogrid/explorer/xsp/explorer.xsp
+	cocoon/astrogrid/explorer
+	cocoon/astrogrid/explorer/xsp
+	cocoon/astrogrid/explorer/xsp/explorer.xsp
+	cocoon/astrogrid/explorer/xsp/session.xsp
 
-cocoon/astrogrid/explorer/xsl
-cocoon/astrogrid/explorer/xsl/explorer.xsl
-cocoon/astrogrid/explorer/xsl/votable.xsl
+	cocoon/astrogrid/explorer/xsl
+	cocoon/astrogrid/explorer/xsl/explorer.xsl
+	cocoon/astrogrid/explorer/xsl/votable.xsl
 
-cocoon/astrogrid/explorer/xml
-cocoon/astrogrid/explorer/xml/votable.000.xml
-cocoon/astrogrid/explorer/xml/votable.001.xml
+	cocoon/astrogrid/explorer/xml
+	cocoon/astrogrid/explorer/xml/votable.000.xml
+	cocoon/astrogrid/explorer/xml/votable.001.xml
 
-cocoon/astrogrid/explorer/images
-cocoon/astrogrid/explorer/images/cont.icon.gif
-cocoon/astrogrid/explorer/images/cont.node.end.gif
-cocoon/astrogrid/explorer/images/cont.node.mid.gif
-cocoon/astrogrid/explorer/images/item.icon.gif
-cocoon/astrogrid/explorer/images/item.node.end.gif
-cocoon/astrogrid/explorer/images/item.node.mid.gif
-cocoon/astrogrid/explorer/images/tree.bar.gif
-cocoon/astrogrid/explorer/images/tree.gap.gif
+	cocoon/astrogrid/explorer/images
+	cocoon/astrogrid/explorer/images/cont.icon.gif
+	cocoon/astrogrid/explorer/images/cont.node.end.gif
+	cocoon/astrogrid/explorer/images/cont.node.mid.gif
+	cocoon/astrogrid/explorer/images/item.icon.gif
+	cocoon/astrogrid/explorer/images/item.node.end.gif
+	cocoon/astrogrid/explorer/images/item.node.mid.gif
+	cocoon/astrogrid/explorer/images/tree.bar.gif
+	cocoon/astrogrid/explorer/images/tree.gap.gif
 
-In addition, explorer.zip contains copies of the original HTML pages and PNG images.
+In addition, explorer.zip contains copies of the original HTML pages and 
+PNG images.
 
-cocoon/astrogrid/html
-cocoon/astrogrid/html/agdataquery.html
-cocoon/astrogrid/html/agdataqueryhelp.html
-cocoon/astrogrid/html/agindex.html
-cocoon/astrogrid/html/agjobmonitor.html
-cocoon/astrogrid/html/agjobmonitorhelp.html
-cocoon/astrogrid/html/aglogin.html
-cocoon/astrogrid/html/agmyspace.html
-cocoon/astrogrid/html/agmyspacehelp.html
-cocoon/astrogrid/html/agnologin.html
-cocoon/astrogrid/html/agregistry.html
-cocoon/astrogrid/html/agregistryhelp.html
-cocoon/astrogrid/html/agtools.html
-cocoon/astrogrid/html/agtoolshelp.html
+	cocoon/astrogrid/html
+	cocoon/astrogrid/html/agdataquery.html
+	cocoon/astrogrid/html/agdataqueryhelp.html
+	cocoon/astrogrid/html/agindex.html
+	cocoon/astrogrid/html/agjobmonitor.html
+	cocoon/astrogrid/html/agjobmonitorhelp.html
+	cocoon/astrogrid/html/aglogin.html
+	cocoon/astrogrid/html/agmyspace.html
+	cocoon/astrogrid/html/agmyspacehelp.html
+	cocoon/astrogrid/html/agnologin.html
+	cocoon/astrogrid/html/agregistry.html
+	cocoon/astrogrid/html/agregistryhelp.html
+	cocoon/astrogrid/html/agtools.html
+	cocoon/astrogrid/html/agtoolshelp.html
 
-cocoon/astrogrid/images
-cocoon/astrogrid/images/aglogo.png
-cocoon/astrogrid/images/ivoalogo.png
+	cocoon/astrogrid/images
+	cocoon/astrogrid/images/aglogo.png
+	cocoon/astrogrid/images/ivoalogo.png
 
-Assuming that you have unpacked explorer.zip into cocoon/astrogrid, then the following sitemap elements should work.
-The first element needs to be added to the 'components' section at the top.
+Assuming that you have unpacked explorer.zip into cocoon/astrogrid,
+then the following sitemap elements should work. The first element
+needs to be added to the 'components' section at the top.
 
 	<map:components>
 		.....
 		<map:actions>
-			<map:action name="astrogrid-explorer" src="org.astrogrid.portal.cocoon.explorer.ExplorerAction"/>
+			<map:action
+				name="astrogrid-explorer"
+				src="org.astrogrid.portal.cocoon.explorer.ExplorerAction"/>
 		</map:actions>
 	</map:components>
 
-The following view elements need to be added to the map:views section of the sitemap.
-Note, these are not used to display the normal pages, they provide debug views of the pipelines.
+The following view elements need to be added to the map:views section
+of the sitemap. Note, these are not used to display the normal pages,
+they provide debug views of the pipelines.
 
 	<map:views>
 		<!-- Original XML displayed as XML -->
@@ -117,38 +124,76 @@ Note, these are not used to display the normal pages, they provide debug views o
 		</map:view>
 	</map:views>
 
-Then the following pipeline needs to be added to the map:pipelines section.
-Note, the actual page names for the site navigation links are passed into the XSL templates as parameters.
-All of the links in the pages are generated using these 'map:parameter' values from the sitemap.
-As is, the explorer page will appear in the pipeline as 'agmyspace.html'.
-In order to minimise the changes required, the current parameters mimic all of the page names in the example HTML pages.
-If the actual page names for the registry browser and data query pages are different, then all you need to do is change the
+Then the following pipeline needs to be added to the map:pipelines
+section. Note, the actual page names for the site navigation links are
+passed into the XSL templates as parameters. All of the links in the
+pages are generated using these 'map:parameter' values from the
+sitemap. As is, the explorer page will appear in the pipeline as
+'agmyspace.html'. In order to minimise the changes required, the
+current parameters mimic all of the page names in the example HTML
+pages. If the actual page names for the registry browser and data
+query pages are different, then all you need to do is change the
 corresponding 'map:parameter' values defined in the sitemap.
 
-Note, the last three matchers in the pipeline, '*.html', '*.gif' and '*.png', may already be covered by the existing site pipelines.
-In which case, these can be omitted from the explorer pipeline.
-However, if you want the explorer to appear as 'agmyspace.html', then this pipeline must be placed before a '*.html' matcher
-in the existing sitemap.
+Note, the last three matchers in the pipeline, '*.html', '*.gif' and
+'*.png', may already be covered by the existing site pipelines. In
+which case, these can be omitted from the explorer pipeline. However,
+if you want the explorer to appear as 'agmyspace.html', then this
+pipeline must be placed before a '*.html' matcher in the existing
+sitemap.
 
-		<!-- Explorer pipeline -->
-		<map:pipeline>
+	<!-- Explorer pipeline -->
+	<map:pipeline>
 
-			<!-- Explorer page -->
-			<map:match pattern="agmyspace.html">
-				<!-- Call our explorer action -->
-				<map:act type="astrogrid-explorer">
-					<!-- Generate our page XML -->
-					<map:generate src="explorer/xsp/explorer.xsp" type="serverpages" label="000, 001"/>
-					<!-- Convert the data into a page -->
-					<map:transform src="explorer/xsl/explorer.xsl" label="002">
-						<!-- Add the action params -->
-						<map:parameter name="action"  value="{action}"/>
-						<map:parameter name="confirm" value="{confirm}"/>
-						<!-- Add the explorer page names -->
-						<map:parameter name="explorer-page" value="agmyspace.html"/>
-						<map:parameter name="votable-page"  value="agvotable.html"/>
-					</map:transform>
-				</map:act>
+		<!-- Explorer page -->
+		<map:match pattern="agmyspace.html">
+			<!-- Call our explorer action -->
+			<map:act type="astrogrid-explorer">
+				<!-- Set the session attribute to check for the user name -->
+				<map:parameter name="user-param"  value="user"/>
+				<!-- Generate our page XML -->
+				<map:generate
+					src="explorer/xsp/explorer.xsp"
+					type="serverpages"
+					label="000, 001"/>
+				<!-- Convert the data into a page -->
+				<map:transform src="explorer/xsl/explorer.xsl" label="002">
+					<!-- Add the action params -->
+					<map:parameter name="action"  value="{action}"/>
+					<map:parameter name="confirm" value="{confirm}"/>
+					<!-- Add the explorer page names -->
+					<map:parameter name="explorer-page" value="agmyspace.html"/>
+					<map:parameter name="votable-page"  value="agvotable.html"/>
+				</map:transform>
+			</map:act>
+			<!-- Wrap the page in our HTML template -->
+			<map:transform src="common/xsl/astrogrid.xsl" label="003">
+				<!-- Add the explorer page names -->
+				<map:parameter name="explorer-page" value="agmyspace.html"/>
+				<map:parameter name="votable-page"  value="agvotable.html"/>
+				<!-- Add the rest of the page names -->
+				<map:parameter name="home-page"     value="agindex.html"/>
+				<map:parameter name="help-page"     value="agmyspacehelp.html"/>
+				<map:parameter name="registry-page" value="agregistry.html"/>
+				<map:parameter name="query-page"    value="agdataquery.html"/>
+				<map:parameter name="monitor-page"  value="agjobmonitor.html"/>
+				<map:parameter name="tools-page"    value="agtools.html"/>
+				<map:parameter name="logout-page"   value="aglogout.html"/>
+			</map:transform>
+			<!-- Serialize as HTML -->
+			<map:serialize type="html"/>
+		</map:match>
+
+		<!-- VoTable data pages -->
+		<map:match pattern="agvotable.html">
+			<map:act type="request">
+				<map:parameter name="parameters" value="true"/>
+				<map:generate src="{data}"/>
+				<!-- Convert the VoTable data into HTML -->
+				<map:transform src="explorer/xsl/votable.xsl">
+					<map:parameter name="explorer-page" value="agmyspace.html"/>
+					<map:parameter name="votable-page"  value="agvotable.html"/>
+				</map:transform>
 				<!-- Wrap the page in our HTML template -->
 				<map:transform src="common/xsl/astrogrid.xsl" label="003">
 					<!-- Add the explorer page names -->
@@ -165,54 +210,26 @@ in the existing sitemap.
 				</map:transform>
 				<!-- Serialize as HTML -->
 				<map:serialize type="html"/>
-			</map:match>
+			</map:act>
+		</map:match>
 
-			<!-- VoTable data pages -->
-			<map:match pattern="agvotable.html">
-				<map:act type="request">
-					<map:parameter name="parameters" value="true"/>
-					<map:generate src="{data}"/>
-					<!-- Convert the VoTable data into HTML -->
-					<map:transform src="explorer/xsl/votable.xsl">
-						<map:parameter name="explorer-page" value="agmyspace.html"/>
-						<map:parameter name="votable-page"  value="agvotable.html"/>
-					</map:transform>
-					<!-- Wrap the page in our HTML template -->
-					<map:transform src="common/xsl/astrogrid.xsl" label="003">
-						<!-- Add the explorer page names -->
-						<map:parameter name="explorer-page" value="agmyspace.html"/>
-						<map:parameter name="votable-page"  value="agvotable.html"/>
-						<!-- Add the rest of the page names -->
-						<map:parameter name="home-page"     value="agindex.html"/>
-						<map:parameter name="help-page"     value="agmyspacehelp.html"/>
-						<map:parameter name="registry-page" value="agregistry.html"/>
-						<map:parameter name="query-page"    value="agdataquery.html"/>
-						<map:parameter name="monitor-page"  value="agjobmonitor.html"/>
-						<map:parameter name="tools-page"    value="agtools.html"/>
-						<map:parameter name="logout-page"   value="aglogout.html"/>
-					</map:transform>
-					<!-- Serialize as HTML -->
-					<map:serialize type="html"/>
-				</map:act>
-			</map:match>
+		<!-- Explorer images -->
+		<map:match pattern="explorer/images/*.gif">
+			<map:read src="explorer/images/{1}.gif" mime-type="images/gif"/>
+		</map:match>
 
-			<!-- Explorer images -->
-			<map:match pattern="explorer/images/*.gif">
-				<map:read src="explorer/images/{1}.gif" mime-type="images/gif"/>
-			</map:match>
+		<!-- HTML pages -->
+		<map:match pattern="*.html">
+			<map:read mime-type="text/html" src="html/{1}.html"/>
+		</map:match>
 
-			<!-- HTML pages -->
-			<map:match pattern="*.html">
-				<map:read mime-type="text/html" src="html/{1}.html"/>
-			</map:match>
+		<!-- Site images -->
+		<map:match pattern="*.gif">
+			<map:read src="images/{1}.gif" mime-type="images/gif"/>
+		</map:match>
+		<map:match pattern="*.png">
+			<map:read src="images/{1}.png" mime-type="images/png"/>
+		</map:match>
 
-			<!-- Site images -->
-			<map:match pattern="*.gif">
-				<map:read src="images/{1}.gif" mime-type="images/gif"/>
-			</map:match>
-			<map:match pattern="*.png">
-				<map:read src="images/{1}.png" mime-type="images/png"/>
-			</map:match>
-
-		</map:pipeline>
+	</map:pipeline>
 
