--- a/astrogrid/mySpace/INSTALL
+++ b/astrogrid/mySpace/INSTALL
@@ -1,9 +1,9 @@
                         MySpace Release Notes and Installation Guide
-                                     Pre-Iteration 3
+                                     Iteration 3
 
 1. Base Test System
 
-* RedHat Linux 8.0 (qin.star.le.ac.uk:143.210.36.131)
+* RedHat Linux 7.3 - 143.210.36.173 (uml01.astrogrid.org)
 
 2. Preparation for MySpace core system:
 
@@ -11,7 +11,7 @@
 
 * Install Tomcat 4.1.24 and set environment variable to point to install dir eg. $CATALINA_HOME=/usr/local/astroGrid/jakarta-tomcat-4.1.24
 
-* Install Axis 1_1RC2 and set environment variable to point to install dir eg. $AXIS_HOME=/usr/local/astroGrid/axis-1_1RC2
+* Install Axis 1_1 and set environment variable to point to install dir eg. $AXIS_HOME=/usr/local/axis
 For more comprehansive installation of Tomcat and Axis please refer to http://wiki.astrogrid.org/bin/view/Astrogrid/Iteration1Release#Preparation
 
 * Jar files required:
@@ -19,17 +19,23 @@ For more comprehansive installation of Tomcat and Axis please refer to http://wi
   jaxrpc.jar
   log4j-1.2.4.jar
   jConfig.jar
+  cog-jglobus.jar
+  policy-client1.0.jar
+  saaj.jar
+  wsdl4j.jar
 
 3. Deploy mySpace Web Services and configure it to suit mySpace
 
 1) Create folder: $CATALINA_HOME/conf/astrogrid/mySpace
    Create folder: $CATALINA_HOME/webapps/mySpace
-2) Check out latest version of mySpace.jar from CVS and place it into $CATALINA_HOME/
-I will attach the jar file with my email for now.
+2) Check out latest version of mySpaceBuild.jar from CVS and place it into $CATALINA_HOME/
+(Should be using ant task to create nessesary directories; place class files into correct directories; 
+place properties files into corret position; but not sure how ant handles configuration?)
 
-3) Without leaving this directory, unjar mySpace.jar
+
+3) Without leaving this directory, unjar mySpaceBuild.jar
 list of files/folders you will have after this step:
--- $CATALIN_HOME/webapps/axis/WEB-INF/lib/mySpaceClasses.jar
+-- $CATALIN_HOME/webapps/axis/WEB-INF/lib/mySpace.jar
 
 -- $CATALINA_HOME/conf/astrogrid/mySpace/example.init
 -- $CATALINA_HOME/conf/astrogrid/mySpace/example.reg
@@ -73,12 +79,12 @@ CHANGE: copy value TO "copy" if you are using Windows
 
 3)open example.config
 CHANGE: /usr/local/astroGrid/jakarta-tomcat-4.1.24/ TO your tomcat installation directory
-CHANGE: localhost TO the server name you installed your MySpace System.
+CHANGE: localhost TO the server name (ip address) you installed your MySpace System.
 for both serv1 and serv2
 CAUTION: please don't delete the "/" at the end of the last 2 elements.
 
 4. Preparation for installing MSExplorer
-1) get version 1.2(29thAug) of cocoon.war from PortalB/InstallKit(Since iteration3 UI stuff still not ready yet and this is the version have been tested fully)
+1) get latest iteration 3 cocoon.war from PortalB/InstallKit and configure following portalB installation guide.
 2) place the war file under your $CATALINA_HOME/webapps restart tomcat
 
 You are off to go and good luck.
